A bit of tidying and a couple of bugs I found als squashed.

--- a/resources/assets/sass/partials/base.scss
+++ b/resources/assets/sass/partials/base.scss
@@ -15,11 +15,9 @@
 /**
  * Navs
  */
-.sub-nav {
-    position: relative;
-    top: -48px;
+.subnav {
     float: right;
-    margin-bottom: -48px;
+    padding-top: 7px;
 }
 
 /**
